# documind

./: .gitignore  README.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/api/routes/: chat.py  documents.py  health.py
backend/app/core/: config.py  error_handlers.py  exceptions.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  chunk.py  document.py
backend/app/schemas/: chat.py  document.py  errors.py  health.py
backend/app/services/: __init__.py  chunking.py  ingestion.py  pdf_extraction.py  rag.py  retrieval.py
backend/app/services/providers/: __init__.py  base.py  factory.py  gemini_provider.py  openai_provider.py
backend/tests/: conftest.py  test_chunking.py  test_errors.py  test_health.py  test_pdf_extraction.py  test_provider_factory.py  test_rag.py
frontend/: README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx
frontend/components/: app-shell.tsx  chat-view.tsx  citation-chips.tsx  document-list.tsx  documents-view.tsx  health-badge.tsx  message.tsx  providers.tsx  settings-view.tsx  sidebar-documents.tsx  sidebar-rail.tsx  sidebar.tsx  sources-card.tsx  theme-toggle.tsx  top-bar.tsx  upload-dropzone.tsx
frontend/components/ui/: scroll-area.tsx
frontend/hooks/: use-chat.ts  use-documents.ts  use-health.ts  use-upload.ts
frontend/lib/: api.ts  query-keys.ts  sse.ts  types.ts  views.ts
