[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[project]
name = "documind-backend"
version = "0.1.0"
description = "FastAPI backend for a RAG document Q&A application."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.0",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.115.0",
    "google-genai>=1.0.0",
    "langchain-text-splitters>=0.3.0",
    "openai>=1.80.0",
    "pdfplumber>=0.11.0",
    "pgvector>=0.4.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.9.0",
    "pymupdf>=1.25.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "tiktoken>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.0",
    "mypy>=1.15.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.11.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "ASYNC",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
# Alembic migration scripts are framework-generated and not worth strict typing.
exclude = ["^alembic/"]

[[tool.mypy.overrides]]
module = ["pgvector.*", "google.*", "fitz", "langchain_text_splitters.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
